--- a/utils/package.json
+++ b/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/utils",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Hellō utility functions",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -13,9 +13,8 @@
     "watch": "tsc --watch --declaration",
     "build": "tsc --declaration",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "prepublish": "npm version patch",
-    "publish": "npm publish --access public",
-    "postpublish": "git push && git push --tags"
+    "prepublish": "npm version patch && git push && git push --tags",
+    "publish": "npm publish --access public"
   },
   "repository": {
     "type": "git",
