--- a/utils/package.json
+++ b/utils/package.json
@@ -13,7 +13,7 @@
     "watch": "tsc --watch --declaration",
     "build": "tsc --declaration",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "prepublish": "npm version patch && git push && git push --tags"
+    "prepublish": "npm run build && npm version patch && git push && git push --tags"
   },
   "repository": {
     "type": "git",
