--- a/utils/package.json
+++ b/utils/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@hellocoop/utils",
-  "version": "1.0.6",
+  "version": "1.0.9",
   "description": "Hellō utility functions",
   "source": "src/index.ts",
   "main": "dist/index.js",
-  "type": "module",
+  "type": "commonjs",
   "types": "dist/index.d.ts",
   "files": [
     "dist/"
