--- a/utils/tsconfig.json
+++ b/utils/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "include": ["src"],
   "compilerOptions": {
     "target": "es2022",
     "lib": ["es2022"],
@@ -7,7 +8,4 @@
     "outDir": "dist/",
     "skipLibCheck": true,
   },
-  "files": [
-    "src/index.ts"
-  ]
 }
