--- a/utils/tsconfig.json
+++ b/utils/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "include": ["src"],
   "compilerOptions": {
     "target": "es2022",
     "lib": ["es2022"],
@@ -8,4 +7,7 @@
     "outDir": "dist/",
     "skipLibCheck": true,
   },
+  "files": [
+    "src/index.ts"
+  ]
 }
