--- a/utils/tsconfig.json
+++ b/utils/tsconfig.json
@@ -1,13 +1,16 @@
 {
+  "extends": "@tsconfig/node18/tsconfig.json",
+  "include": ["src"],
+  "exclude": ["node_modules", "./**/dist"],
   "compilerOptions": {
-    "target": "es2022",
-    "lib": ["es2022"],
-    "module": "es2022",
-    "esModuleInterop": true,
-    "outDir": "dist/",
-    "skipLibCheck": true,
-  },
-  "files": [
-    "src/index.ts"
-  ]
+      "paths": {
+          "utils": ["./src/index.ts"]
+      },
+      "declarationMap": true,
+      "declaration": true,
+      "baseUrl": "./src/",
+      "target": "es2019",
+      "strict": true,
+      "outDir": "./dist"
+  }
 }
