add in test-app

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Monorepo package management",
   "workspaces": [
-    "utils","quickstart","nextjs"
+    "utils","quickstart","nextjs","test-app"
   ],
   "repository": {
     "type": "git",
