--- a/nextjs/tsconfig.json
+++ b/nextjs/tsconfig.json
@@ -4,7 +4,7 @@
   "exclude": ["node_modules", "./**/dist"],
   "compilerOptions": {
       "paths": {
-          "nextjs-hello": ["./src/index.ts"]
+          "nextjs": ["./src/index.ts"]
       },
       "declarationMap": true,
       "declaration": true,
