--- a/utils/package.json
+++ b/utils/package.json
@@ -37,7 +37,10 @@
   },
   "homepage": "https://github.com/hellocoop/packages#readme",
   "devDependencies": {
-    "@types/node": "^20.6.2",
+    "@types/node": "^18.6.2",
     "typescript": "^5.2.2"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
