update tsconfig - ts type for fetch

--- a/utils/tsconfig.json
+++ b/utils/tsconfig.json
@@ -6,6 +6,7 @@
       "paths": {
           "utils": ["./src/index.ts"]
       },
+      "lib": ["dom"],
       "declarationMap": true,
       "declaration": true,
       "baseUrl": "./src/",
