update quickstart pkg to have noop build script

--- a/quickstart/package.json
+++ b/quickstart/package.json
@@ -7,7 +7,8 @@
     "quickstart": "./index.mjs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo \"No build specified\" && exit 0"
   },
   "repository": {
     "type": "git",
