rework config names

--- a/test-app/.env.local.example
+++ b/test-app/.env.local.example
@@ -1,3 +1,4 @@
-HELLO_SESSION_SECRET=2gyZ3GDw3LHZQKDhPmPDL3sjREVRXPr8
-HELLO_BASE_URL=http://localhost:3000
-HELLO_CLIENT_ID=A_CLIENT_ID_YOU_ARE_A_DEVELOPER_FOR
+# TODO - turn these into better notes
+# HELLOCOOP_SESSION_SECRET=GENERATED_RANDOM_VALUE_32_CHARS+
+# HELLOCOOP_HOST=https://example.com
+# HELLOCOOP_CLIENT_ID=A_CLIENT_ID_YOU_ARE_A_DEVELOPER_FOR
