--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "type": "git",
     "url": "git+https://github.com/hellocoop/packages.git"
   },
-  "scripts": {},
+  "scripts": {
+    "patch": "node scripts/patch-node_modules.js"
+  },
   "author": {
     "name": "Hello Identity Co-op",
     "email": "contact@hello.coop",
