--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "scripts": {
     "patch": "node scripts/patch-node_modules.js",
     "build": "npm run build --workspaces",
-    "watch": "npm run watch --workspaces"
+    "watch:utils": "npm run watch --workspace utils",
+    "watch:nextjs": "npm run watch --workspace nextjs",
+    "watch": "npm-run-all -p watch:*"
   },
   "author": {
     "name": "Hello Identity Co-op",
@@ -28,5 +30,6 @@
   "homepage": "https://github.com/hellocoop/packages#readme",
   "license": "MIT",
   "dependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
