--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/nextjs",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Next.js SDK for Hellō https://hello.dev",
   "repository": {
     "type": "git",
@@ -56,7 +56,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@hellocoop/utils": "^1.0.19",
+    "@hellocoop/utils": "latest",
     "cors": "^2.8.5",
     "iron-session": "^6.3.1",
     "swr": "^2.2.2"
