--- a/quickstart-nextjs/package.json
+++ b/quickstart-nextjs/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@hellocoop/quickstart-nextjs",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Provides a CLI to run Hellō Quickstart for a Next.js app.",
-  "module": "quickstart-next.js",
+  "module": "quickstart-next.mjs",
   "main": "index.js",
   "bin": {
     "quickstart-nextjs": "./quickstart-nextjs.mjs"
@@ -36,7 +36,7 @@
   },
   "homepage": "https://github.com/hellocoop/packages#readme",
   "dependencies": {
-    "@hellocoop/quickstart": "^1.0.13"
+    "@hellocoop/quickstart": "latest"
   },
   "type": "module"
 }
