--- a/quickstart-nextjs/package.json
+++ b/quickstart-nextjs/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@hellocoop/quickstart-nextjs",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "A CLI andmodule to start the Hellō Quickstart web app for a Next.js app.",
   "main": "index.js",
   "bin": {
-    "quickstart-nextjs": "./quickstart-next.mjs"
+    "quickstart-nextjs": "quickstart-next.mjs"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
