--- a/quickstart/package.json
+++ b/quickstart/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@hellocoop/quickstart",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "A CLI and module to start the Hello Quickstart web app and return a client_id",
   "main": "index.js",
   "bin": {
-    "quickstart": "./quickstart.mjs"
+    "quickstart": "quickstart.mjs"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
