--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/nextjs",
-  "version": "1.0.30",
+  "version": "1.1.0",
   "description": "Next.js SDK for Hellō https://hello.dev",
   "repository": {
     "type": "git",
@@ -45,11 +45,11 @@
     "@tsconfig/node18": "^18.2.2",
     "@types/cors": "^2.8.14",
     "@types/react": "^18.2.21",
+    "eslint-config-next": "^13.5.1",
     "next": "^13.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.1",
-    "eslint-config-next": "^13.5.1",
     "typescript": "^5.2.2"
   },
   "engines": {
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "@hellocoop/utils": "latest",
+    "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "iron-session": "^6.3.1",
     "swr": "^2.2.2"
