--- a/quickstart/package.json
+++ b/quickstart/package.json
@@ -36,7 +36,11 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "get-port": "^7.0.0",
-    "open": "^9.1.0"
+    "open": "^9.1.0",
+    "semver": "^7.5.4"
   },
-  "type": "module"
+  "type": "module",
+  "engines": {
+    "node": ">=18.3"
+  }
 }
