--- a/quickstart/package.json
+++ b/quickstart/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/quickstart",
-  "version": "1.1.0",
+  "version": "2.0.1",
   "description": "A CLI and module to start the Hello Quickstart web app and return a client_id",
   "main": "index.js",
   "bin": {
@@ -36,7 +36,11 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "get-port": "^7.0.0",
-    "open": "^9.1.0"
+    "open": "^9.1.0",
+    "semver": "^7.5.4"
   },
-  "type": "module"
+  "type": "module",
+  "engines": {
+    "node": ">=18.3"
+  }
 }
