--- a/core/package.json
+++ b/core/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@hellocoop/core",
-  "version": "1.0.1",
-  "description": "Core Hellō utility functions",
+  "version": "1.0.0",
+  "description": "Hellō utility functions",
   "source": "src/index.ts",
   "main": "dist/index.js",
-  "type": "module",
+  "type": "commonjs",
   "types": "dist/index.d.ts",
   "files": [
     "dist/"
@@ -12,7 +12,7 @@
   "scripts": {
     "watch": "tsc --watch --declaration",
     "build": "tsc --declaration",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --test"
   },
   "repository": {
     "type": "git",
@@ -37,7 +37,7 @@
   },
   "homepage": "https://github.com/hellocoop/packages#readme",
   "devDependencies": {
-    "@types/node": "^18.15.11",
+    "@types/node": "^18.6.2",
     "typescript": "^5.2.2"
   },
   "engines": {
