--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@hellocoop/nextjs",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "Next.js SDK for Hellō https://hello.dev",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hellocoop/packages.git"
   },
+  "homepage": "https://www.hello.dev/documentation/sdk-reference.html#next-js",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
@@ -29,12 +30,12 @@
   "bugs": {
     "url": "https://github.com/hellocoop/packages/issues"
   },
-  "homepage": "https://github.com/hellocoop/packages#readme",
   "scripts": {
     "watch": "tsc --watch --declaration",
     "build": "npm run build:clean && npm run build:src",
     "build:clean": "rimraf dist/",
-    "build:src": "tsc --declaration"
+    "build:src": "tsc --declaration",
+    "secret": "node -e \"console.log(crypto.randomBytes(32).toString('hex'))\""
   },
   "peerDependencies": {
     "next": ">=10",
