--- a/client/package.json
+++ b/client/package.json
@@ -36,8 +36,7 @@
     },
     "homepage": "https://github.com/hellocoop/packages#readme",
     "dependencies": {
-      "jwt-decode": "^3.1.2",
-      "pkce-challenge": "^3.1.0"
+      "jwt-decode": "^3.1.2"
     },
     "devDependencies": {
       "typescript": "^5.2.2"
