--- a/core/package.json
+++ b/core/package.json
@@ -35,7 +35,7 @@
   "bugs": {
     "url": "https://github.com/hellocoop/packages/issues"
   },
-  "homepage": "https://github.com/hellocoop/packages#readme",
+  "homepage": "https://www.hello.dev/docs/sdks/core-client",
   "devDependencies": {
     "@types/node": "^18.6.2",
     "typescript": "^5.2.2"
