--- a/quickstart/package.json
+++ b/quickstart/package.json
@@ -32,7 +32,7 @@
   "bugs": {
     "url": "https://github.com/hellocoop/packages/issues"
   },
-  "homepage": "https://github.com/hellocoop/packages#readme",
+  "homepage": "https://www.hello.dev/docs/sdk/quickstart",
   "dependencies": {
     "chalk": "^5.3.0",
     "dotenv": "^16.3.1",
