--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "quickstart-nextjs",
     "nextjs",
     "core",
-    "client"
+    "client",
+    "types",
+    "svelte",
+    "vue",
+    "react"
   ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hellocoop/packages.git"
   },
   "scripts": {
-    "patch-starter": "npm run build && cp -r nextjs ../hello-nextjs-starter/node_modules/@hellocoop/ && cp -r utils ../hello-nextjs-starter/node_modules/@hellocoop/ && cp -r core ../hello-nextjs-starter/node_modules/@hellocoop/ && rm -rf ../hello-nextjs-starter/.next",
+    "patch-starter": "npm run build && cp -r nextjs ../hello-nextjs-starter/node_modules/@hellocoop/ && cp -r react ../hello-nextjs-starter/node_modules/@hellocoop/ && cp -r core ../hello-nextjs-starter/node_modules/@hellocoop/ && cp -r types ../hello-nextjs-starter/node_modules/@hellocoop/ && rm -rf ../hello-nextjs-starter/.next",
     "build": "npm run build --workspaces",
     "watch:utils": "npm run watch --workspace utils",
     "watch:nextjs": "npm run watch --workspace nextjs",
