--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@hellocoop/client",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "description": "Hellō utility functions for the browser",
     "source": "src/index.ts",
     "main": "dist/index.js",
@@ -11,7 +11,7 @@
     "scripts": {
         "watch": "tsc --watch --declaration",
         "prebuild": "rimraf dist/",
-        "build": "esbuild src/index.ts --minify --bundle --outdir=dist --format=esm && tsc --emitDeclarationOnly --outDir dist",
+        "build": "esbuild src/index.ts --bundle --outdir=dist --format=esm && tsc --emitDeclarationOnly --outDir dist",
         "test": "node --test"
     },
     "repository": {
