--- a/svelte/package.json
+++ b/svelte/package.json
@@ -1,56 +1,62 @@
 {
-  "name": "@hellocoop/svelte",
-  "version": "1.0.0",
-  "description": "Svelte SDK for Hellō https://hello.dev",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hellocoop/packages.git"
-  },
-  "homepage": "https://www.hello.dev/docs/sdks/svelte",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist/"
-  ],
-  "keywords": [
-    "sveltejs",
-    "svelte",
-    "svelte.js",
-    "hello",
-    "openid",
-    "oidc",
-    "sso"
-  ],
-  "author": {
-    "name": "Hello Identity Co-op",
-    "email": "contact@hello.coop",
-    "url": "https://hello.coop"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/hellocoop/packages/issues"
-  },
-  "scripts": {
-    "watch": "tsc --watch --declaration",
-    "build": "npm run build:clean && npm run build:src",
-    "build:clean": "rimraf dist/",
-    "build:src": "tsc --declaration"
-  },
-  "peerDependencies": {
-    "react": ">=17",
-    "react-dom": ">=17"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rimraf": "^5.0.1",
-    "typescript": "^5.2.2"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "dependencies": {
-    "@hellocoop/types": "^1.0.0"
-  }
+	"name": "@hellocoop/svelte",
+	"version": "1.0.0",
+	"description": "Svelte SDK for Hellō https://hello.dev",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/hellocoop/packages.git"
+	},
+	"homepage": "https://www.hello.dev/docs/sdks/svelte",
+	"scripts": {
+		"build": "svelte-kit sync && svelte-package && publint"
+	},
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		}
+	},
+	"keywords": [
+		"reactjs",
+		"react",
+		"react.js",
+		"hello",
+		"openid",
+		"oidc",
+		"sso"
+	],
+	"author": {
+		"name": "Hello Identity Co-op",
+		"email": "contact@hello.coop",
+		"url": "https://hello.coop"
+	},
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/hellocoop/packages/issues"
+	},
+	"files": [
+		"dist",
+		"!dist/**/*.test.*",
+		"!dist/**/*.spec.*"
+	],
+	"peerDependencies": {
+		"svelte": "^4.0.0"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/package": "^2.0.0",
+		"publint": "^0.1.9",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.3",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.4.2"
+	},
+	"svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"type": "module",
+	"dependencies": {
+		"sswr": "^2.0.0"
+	}
 }
