--- a/svelte/package.json
+++ b/svelte/package.json
@@ -57,6 +57,7 @@
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
+		"@hellocoop/types": "^1.0.2",
 		"sswr": "^2.0.0"
 	}
 }
