--- a/express/package.json
+++ b/express/package.json
@@ -10,7 +10,8 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./dist/index.js",
+    "./middleware": "./dist/middleware.js"
   },
   "files": [
     "dist/"
