--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "description": "Monorepo package management",
   "workspaces": [
-    "quickstart",
-    "nextjs",
-    "react",
-    "express",
-    "core",
     "client",
+    "core",
+    "express",
+    "nextjs",
+    "quickstart",
+    "react",
     "types"
   ],
   "repository": {
@@ -16,10 +16,16 @@
     "url": "git+https://github.com/hellocoop/packages.git"
   },
   "scripts": {
+    "clean": "rimraf client/node_modules core/node_modules express/node_modules nextjs/node_modules quickstart/node_modules react/node_modules types/node_modules",
+    "build": "npm run clean && npm run build --workspaces",
     "patch-starter": "npm run build && cp -r nextjs ../hello-nextjs-starter/node_modules/@hellocoop/ && cp -r react ../hello-nextjs-starter/node_modules/@hellocoop/ && cp -r core ../hello-nextjs-starter/node_modules/@hellocoop/ && cp -r types ../hello-nextjs-starter/node_modules/@hellocoop/ && rm -rf ../hello-nextjs-starter/.next",
-    "build": "npm run build --workspaces",
-    "watch:utils": "npm run watch --workspace utils",
+    "watch:client": "npm run watch --workspace client",
+    "watch:core": "npm run watch --workspace core",
+    "watch:express": "npm run watch --workspace express",
     "watch:nextjs": "npm run watch --workspace nextjs",
+    "watch:quickstart": "npm run watch --workspace quickstart",
+    "watch:react": "npm run watch --workspace react",
+    "watch:types": "npm run watch --workspace types",
     "watch": "npm-run-all -p watch:*"
   },
   "author": {
@@ -33,6 +39,7 @@
   "homepage": "https://github.com/hellocoop/packages#readme",
   "license": "MIT",
   "dependencies": {
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^5.0.5"
   }
 }
