--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react",
     "svelte",
     "vue",
-    "svelte-test"
+    "svelte-test",
+    "vue-test"
   ],
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
   "homepage": "https://github.com/hellocoop/packages#readme",
   "license": "MIT",
   "dependencies": {
+    "@hellocoop/vue": "^1.0.0",
     "npm-run-all": "^4.1.5"
   }
 }
