--- a/express/tsconfig.json
+++ b/express/tsconfig.json
@@ -1,13 +1,17 @@
+
 {
   "extends": "@tsconfig/node18/tsconfig.json",
   "include": ["src"],
   "exclude": ["node_modules", "./**/dist"],
   "compilerOptions": {
-      "declarationMap": true,
-      "declaration": true,
-      "baseUrl": "./src/",
-      "target": "es2019",
-      "strict": true,
-      "outDir": "./dist"
+    "declarationMap": true,
+    "declaration": true,
+    "baseUrl": "./src/",
+    "target": "ES2019",             // Target ES2019
+    "strict": true,
+    "outDir": "./dist",
+    "module": "CommonJS",           // Use CommonJS for module system
+    "moduleResolution": "node"      // Set moduleResolution to "node" for compatibility with Node.js 18
   }
 }
+
