--- a/nextjs/tsconfig.json
+++ b/nextjs/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@tsconfig/node18/tsconfig.json",
-  "include": ["src","../shared/**/*"],
+  "include": ["src"],
   "exclude": ["node_modules", "./**/dist"],
   "compilerOptions": {
       "declarationMap": true,
