--- a/express/package.json
+++ b/express/package.json
@@ -40,11 +40,15 @@
     "build:clean": "rimraf dist/",
     "build:src": "tsc --declaration"
   },
+  "peerDependencies": {
+    "express": "^4"
+  },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
     "@types/cookie": "^0.5.2",
     "@types/express": "^4.17.20",
     "rimraf": "^5.0.1",
+    "express": "^4.18.2",
     "typescript": "^5.2.2"
   },
   "engines": {
@@ -55,7 +59,6 @@
     "@hellocoop/types": "latest",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1"
   }
 }
