--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/nextjs",
-  "version": "2.9.0",
+  "version": "2.9.1",
   "description": "Next.js SDK for Hellō https://hello.dev",
   "repository": {
     "type": "git",
@@ -46,6 +46,7 @@
     "react-dom": ">=17"
   },
   "devDependencies": {
+    "@hellocoop/types": "*",
     "@tsconfig/node18": "^18.2.2",
     "@types/cookie": "^0.5.2",
     "@types/cors": "^2.8.14",
@@ -61,9 +62,8 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@hellocoop/core": "latest",
-    "@hellocoop/react": "latest",
-    "@hellocoop/types": "latest",
+    "@hellocoop/core": "*",
+    "@hellocoop/react": "*",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "swr": "^2.2.2"
