--- a/core/package.json
+++ b/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/core",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Hellō utility functions",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -37,10 +37,14 @@
   },
   "homepage": "https://www.hello.dev/docs/sdks/core-client",
   "devDependencies": {
+    "@hellocoop/types": "*",
     "@types/node": "^18.6.2",
     "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "@hellocoop/constants": "*"
   }
 }
