--- a/express/package.json
+++ b/express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/express",
-  "version": "1.8.0",
+  "version": "1.8.1",
   "description": "Express SDK for Hellō https://hello.dev",
   "repository": {
     "type": "git",
@@ -44,6 +44,7 @@
     "express": "^4"
   },
   "devDependencies": {
+    "@hellocoop/types": "*",
     "@tsconfig/node18": "^18.2.2",
     "@types/cookie": "^0.5.2",
     "@types/express": "^4.17.20",
@@ -55,8 +56,8 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@hellocoop/core": "latest",
-    "@hellocoop/types": "latest",
+    "@hellocoop/core": "*",
+    "@hellocoop/constants": "*",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1"
