--- a/react/package.json
+++ b/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/react",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "React SDK for Hellō https://hello.dev",
   "repository": {
     "type": "git",
@@ -41,6 +41,7 @@
     "react-dom": ">=17"
   },
   "devDependencies": {
+    "@hellocoop/types": "*",
     "@types/react": "^18.2.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -51,7 +52,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@hellocoop/types": "^1.0.0",
+    "@hellocoop/constants": "*",
     "swr": "^2.2.2"
   }
 }
