--- a/router/package.json
+++ b/router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/router",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "Generic router for Hellō https://hello.dev",
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
     "build:src": "tsc"
   },
   "devDependencies": {
+    "@hellocoop/types": "*",
     "@tsconfig/node18": "^18.2.2",
     "@types/cookie": "^0.5.2",
     "rimraf": "^5.0.1",
@@ -46,8 +47,8 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@hellocoop/core": "latest",
-    "@hellocoop/types": "latest",
+    "@hellocoop/core": "*",
+    "@hellocoop/constants": "*",
     "cookie": "^0.5.0"
   }
 }
