--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/nextjs",
-  "version": "2.9.1",
+  "version": "2.9.2",
   "description": "Next.js SDK for Hellō https://hello.dev",
   "repository": {
     "type": "git",
@@ -63,6 +63,7 @@
   },
   "dependencies": {
     "@hellocoop/core": "*",
+    "@hellocoop/router": "*",
     "@hellocoop/react": "*",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
