--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@hellocoop/client",
-    "version": "1.0.9",
+    "version": "1.0.11",
     "description": "Hellō utility functions for the browser",
     "source": "src/index.ts",
     "main": "dist/index.js",
@@ -37,8 +37,12 @@
     },
     "homepage": "https://www.hello.dev/docs/sdks/core-client",
     "devDependencies": {
+        "@hellocoop/types": "*",
         "esbuild": "^0.19.5",
         "rimraf": "^5.0.5",
         "typescript": "^5.2.2"
+    },
+    "dependencies": {
+        "@hellocoop/constants": "*"
     }
 }
