--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -13,38 +13,40 @@ services:
       - mock
     ports:
       - '3333:3333'
+      # debugger
+      - '9339:9229'
     environment:
       ISSUER: 'http://mockin:3333'
 
   app:
-    depends_on:
-      - mockin
-    image: node:18
+    image: app
     build:
-      context: ..
+      context: ./app
     networks: 
       - mock
-    volumes:
-      - type: bind
-        source: ..
-        target: /usr/src/app
-    working_dir: /usr/src/app
     ports:
       - '8080:8080'
+      # debugger
       - '9449:9229'    
     environment:
       HELLO_WALLET: 'http://mockin:3333'
       HELLO_COOKIE_SECRET: '66c71f55568f7b0c3b30cb6a8df9975b5125000caa775240b2e76eb96c43715e'
   
-  # playwright:
-  #   depends_on:
-  #     - mockin
-  #   image: mcr.microsoft.com/playwright:v1.40.0-jammy
-  #   networks: 
-  #     - mock
-  #   volumes:
-  #     - type: bind 
-  #       source: ./
-  #       target: /apps
-  #   working_dir: /apps
-  #   ipc: host
+  playwright:
+    depends_on:
+      - app
+      - mockin
+    image: playwright
+    build:
+      context: ./playwright
+    networks: 
+      - mock
+    ports:
+      - '9323:9323'
+    # For test development, un comment the following lines 
+    # command: tail -f /dev/null
+    # volumes:
+    #   - ./playwright:/playwright
+    #
+    # to run tests, run this in another terminal
+    # docker-compose exec playwright /bin/bash
