--- a/express/package.json
+++ b/express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/express",
-  "version": "1.8.7",
+  "version": "1.9.0",
   "description": "Express SDK for Hellō https://hello.dev",
   "repository": {
     "type": "git",
@@ -10,8 +10,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
-    ".": "./dist/index.js",
-    "./middleware": "./dist/middleware.js"
+    ".": "./dist/index.js"
   },
   "files": [
     "dist/"
