--- a/express/package.json
+++ b/express/package.json
@@ -43,21 +43,24 @@
     "express": "^4"
   },
   "devDependencies": {
+    "@hellocoop/mockin": "^1.0.4",
     "@hellocoop/types": "*",
+    "@playwright/test": "^1.40.1",
     "@tsconfig/node18": "^18.2.2",
     "@types/cookie": "^0.5.2",
     "@types/express": "^4.17.20",
-    "rimraf": "^5.0.1",
+    "@types/node": "^20.10.7",
     "express": "^4.18.2",
+    "rimraf": "^5.0.1",
     "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18"
   },
   "dependencies": {
+    "@hellocoop/constants": "*",
     "@hellocoop/core": "*",
     "@hellocoop/router": "*",
-    "@hellocoop/constants": "*",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1"
