--- a/fastify/tsconfig.json
+++ b/fastify/tsconfig.json
@@ -1,17 +1,15 @@
-
 {
   "extends": "@tsconfig/node18/tsconfig.json",
-  "include": ["src"],
-  "exclude": ["node_modules", "./**/dist"],
+  "exclude": ["node_modules", "**/dist"],
+  "include": ["src/*.ts"],
   "compilerOptions": {
+    "forceConsistentCasingInFileNames": true,
     "declarationMap": true,
-    "declaration": true,
-    "baseUrl": "./src/",
-    "target": "ES2019",             // Target ES2019
-    "strict": true,
-    "outDir": "./dist",
-    "module": "CommonJS",           // Use CommonJS for module system
-    "moduleResolution": "node"      // Set moduleResolution to "node" for compatibility with Node.js 18
+      "declaration": true,
+      "baseUrl": "./src/",
+      "lib": ["dom", "dom.iterable", "esnext"],
+      "target": "ES2022",
+      "strict": true,
+      "outDir": "./dist"
   }
 }
-
