--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@tsconfig/node18/tsconfig.json",
-  "exclude": ["node_modules", "./**/dist"],
-  "include": ["./src"],
+  "exclude": ["node_modules", "**/dist"],
+  "include": ["src/*.ts"],
   "compilerOptions": {
       "declarationMap": true,
       "declaration": true,
