--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@hellocoop/client",
-    "version": "1.1.4",
+    "version": "1.1.5",
     "description": "Hellō utility functions for the browser",
     "source": "src/index.ts",
     "main": "dist/index.js",
@@ -37,12 +37,12 @@
     },
     "homepage": "https://www.hello.dev/docs/sdks/core-client",
     "devDependencies": {
-        "@hellocoop/types": "*",
+        "@hellocoop/types": "~1.1.5",
         "esbuild": "^0.19.5",
         "rimraf": "^5.0.5",
         "typescript": "^5.2.2"
     },
     "dependencies": {
-        "@hellocoop/constants": "*"
+        "@hellocoop/constants":"~1.1.5"
     }
 }
