--- a/core/package.json
+++ b/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/core",
-  "version": "1.4.4",
+  "version": "1.4.5",
   "description": "Hellō utility functions",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -37,7 +37,7 @@
   },
   "homepage": "https://www.hello.dev/docs/sdks/core-client",
   "devDependencies": {
-    "@hellocoop/types": "*",
+    "@hellocoop/types": "~1.1.5",
     "@types/node": "^18.6.2",
     "typescript": "^5.2.2"
   },
@@ -45,6 +45,6 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@hellocoop/constants": "*"
+    "@hellocoop/constants":"~1.1.5"
   }
 }
