--- a/express/package.json
+++ b/express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/express",
-  "version": "1.11.4",
+  "version": "1.11.5",
   "description": "Express SDK for Hellō https://hello.dev",
   "repository": {
     "type": "git",
@@ -45,7 +45,7 @@
   },
   "devDependencies": {
     "@hellocoop/mockin": "^1.0.4",
-    "@hellocoop/types": "*",
+    "@hellocoop/types": "~1.1.5",
     "@playwright/test": "^1.42.1",
     "@tsconfig/node18": "^18.2.2",
     "@types/cookie": "^0.5.2",
@@ -59,9 +59,9 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@hellocoop/constants": "*",
-    "@hellocoop/core": "*",
-    "@hellocoop/router": "*",
+    "@hellocoop/constants": "~1.1.5",
+    "@hellocoop/core": "~1.4.5",
+    "@hellocoop/router": "~1.8.7",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1"
