--- a/router/package.json
+++ b/router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/router",
-  "version": "1.8.6",
+  "version": "1.8.7",
   "description": "Generic router for Hellō https://hello.dev",
   "repository": {
     "type": "git",
@@ -37,7 +37,7 @@
     "build:src": "tsc"
   },
   "devDependencies": {
-    "@hellocoop/types": "*",
+    "@hellocoop/types": "~1.1.5",
     "@tsconfig/node18": "^18.2.2",
     "@types/cookie": "^0.5.2",
     "rimraf": "^5.0.1",
@@ -47,8 +47,8 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@hellocoop/core": "*",
-    "@hellocoop/constants": "*",
+    "@hellocoop/core": "~1.4.5",
+    "@hellocoop/constants": "~1.1.5",
     "cookie": "^0.5.0"
   }
 }
