--- a/types/package.json
+++ b/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/types",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "Types for Hellō packages",
   "repository": {
     "type": "git",
@@ -35,6 +35,6 @@
   },
   "devDependencies": {
     "rimraf": "^5.0.1",
-    "@hellocoop/constants": "*"
+    "@hellocoop/constants":"~1.1.5"
   }
 }
