--- a/router/package.json
+++ b/router/package.json
@@ -40,6 +40,7 @@
     "@hellocoop/types": "~1.1.5",
     "@tsconfig/node18": "^18.2.2",
     "@types/cookie": "^0.5.2",
+    "@types/jws": "^3.2.10",
     "rimraf": "^5.0.1",
     "typescript": "^5.2.2"
   },
@@ -47,8 +48,8 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@hellocoop/core": "~1.4.5",
     "@hellocoop/constants": "~1.1.5",
+    "@hellocoop/core": "~1.4.5",
     "cookie": "^0.5.0"
   }
 }
