--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "quickstart",
     "react",
     "router",
+    "identifier",
     "types"
   ],
   "repository": {
@@ -41,6 +42,7 @@
   "homepage": "https://github.com/hellocoop/packages#readme",
   "license": "MIT",
   "dependencies": {
+    "nanoid": "^5.0.7",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5"
   }
