--- a/identifier/package.json
+++ b/identifier/package.json
@@ -1,18 +1,25 @@
 {
   "name": "@hellocoop/identifier",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "A module for generating and verifying Hellō identifiers with a checksum.",
-  "main": "dist/identifier.cjs",
-  "module": "dist/identifier.mjs",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hellocoop/packages.git"
+  },
+  "files": [
+    "dist/"
+  ],
+  "main": "./dist/identifier.cjs",
+  "module": "./dist/identifier.mjs",
   "type": "module",
   "exports": {
-    "require": "dist/identifier.cjs",
-    "import": "dist/identifier.mjs"
+    "require": "./dist/identifier.cjs",
+    "import": "./dist/identifier.mjs"
   },
-  "types": "dist/identifier.d.ts",
+  "types": "./dist/identifier.d.ts",
   "scripts": {
     "build": "node src/build.js",
-    "test": "node test/test.js"
+    "test": "node test/test.cjs && node test/test.mjs"
   },
   "keywords": [
     "identifier",
