--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   "homepage": "https://github.com/hellocoop/packages#readme",
   "license": "MIT",
   "dependencies": {
-    "nanoid": "^5.0.7",
+    "chai": "^5.1.1",
+    "esm": "^3.2.25",
+    "mocha": "^10.6.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5"
   }
