--- a/svelte/package.json
+++ b/svelte/package.json
@@ -8,7 +8,7 @@
 	},
 	"homepage": "https://www.hello.dev/docs/sdks/svelte",
 	"scripts": {
-		"build": "cp ../types/types.ts ./src/lib/ && svelte-kit sync && svelte-package && publint"
+		"build": "cp ../types/src/types.ts ./src/lib/ && svelte-kit sync && svelte-package && publint"
 	},
 	"exports": {
 		".": {
